--- a/css/app.css
+++ b/css/app.css
@@ -32,6 +32,57 @@
 .media-left {
     padding-right: 15px;
 }
-.media-body {
-    padding-top: 10px;
+.media-heading {
+    padding-top: 1ch;
+    margin-bottom: 0.5ch;
+}
+
+/*REPLY BEGIN*/
+.replay-banner {
+    margin-top: 10px;
+    padding: 5px 15px;
+    background-color: #bce8f1;
+    border-bottom: 1px solid #9acfea;
+    font-family: "Microsoft YaHei", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.user-info {
+    padding-top: 0.5ch;
+    margin: 0 0 0.5ch;
+}
+.reply-body {
+    background-color: #fff;
+    color: rgb(51, 51, 51);
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    padding: 15px;
+    line-height: 20px;
+    width: 100%;
+}
+#replies>.panel-reply:last-child {
+    border-bottom: 1px solid #bce8f1;
+    margin-bottom: 100px;
+}
+.reply-heading {
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-color: #bce8f1;
+    padding: 10px 15px;
+    color: #31708f;
+    background-color: #d9edf7;
+}
+.msg-text {
+    word-wrap: break-word;
+}
+.reply-icon {
+    /*float: right;*/
+    display: inline-block;
+    float: right;
+    vertical-align: middle;
+    text-align: right;
+    /*margin-left: -20px;*/
+    padding: 0 8px;
+    color: #2aabd2;
 }
